# llvm-IR-passes

./: .gitignore  README.md
afl-llvm/: backup.cpp  pass.cpp
afl_maybe_log/: pass.cpp
beginners/: CMakeLists.txt
beginners/magic_value/: CMakeLists.txt  if_else.c
c/: .gdb_history  a.out  cast  cast.c  peda-session-a.out.txt  test_stack_guard.c
cmp_reduce/: pass.cpp
cpp/: formatv.cpp
gep_analysis/: pass.cpp
gep_analysis/cgc/: tags
ir_decoder/: pass.cpp
ir_decoder/c/: \  charcmp  charcmp.c  global_variable.c  intcmp
lea_analysis/: main.c.in  pass.cpp
lea_analysis/cgc/: cromu_001.c  func_c41  gep_c41
libfuzzer/tutorial/: a.out  crash-a5bbcbbdc89941c83312da9666c5ca7d239c44aa  main.c  myTarget.c
magic_value_extract/: pass.cpp
print_func/: CMakeLists.txt  cmd.sh.in  fibonacci.c.in
simple_pass/: README
simple_pass/get_IR/: pass.cpp
simple_pass/globvar/: pass.cpp
simple_pass/irbuilder_util/: main.c.in  pass.cpp
simple_pass/module_pass/: pass.cpp
simple_pass/only_operator_multiply/: pass.cpp
simple_pass/print_func/: pass.cpp  run.sh.in
simple_pass/reference/: main.c.in  pass.cpp
simple_pass/splitBasicBlock/: pass.cpp
simple_pass/template/: CMakeLists.txt
stackguard/: CMakeLists.txt  pass.cpp
t_fuzz/: main.c.in  pass.cpp
template/: pass.cpp
